misc/Linux/ftp-install-config/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
#ssh
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
#ftp
-A INPUT -m state --state NEW -m tcp -p tcp --dport 21 -j ACCEPT
#smtp
-A INPUT -m state --state NEW -m tcp -p tcp --dport 25 -j ACCEPT
#http
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
#MySQL
-A INPUT -m state --state NEW -m tcp -p tcp --dport 3306 -j ACCEPT
#memcache
-A INPUT -m state --state NEW -m tcp -p tcp --dport 11211 -j ACCEPT
#redis
-A INPUT -m state --state NEW -m tcp -p tcp --dport 6379 -j ACCEPT
#mongodb
-A INPUT -m state --state NEW -m tcp -p tcp --dport 27017 -j ACCEPT
#SVN
-A INPUT -m state --state NEW -m tcp -p tcp --dport 3690 -j ACCEPT
#samba
-A INPUT -m state --state NEW -m tcp -p tcp --dport 137 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 138 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 139 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 389 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 445 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 901 -j ACCEPT



-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
